Edit profile is on the way

--- a/EchoFeed/accounts/templates/accounts/register.html
+++ b/EchoFeed/accounts/templates/accounts/register.html
@@ -91,4 +91,5 @@
 <script src="{% static 'js/showAlert.js' %}"></script>
 <script src="{% static 'js/register.js' %}"></script>
 <script src="{% static 'js/login.js' %}"></script>
+<script src="{% static 'js/checkUsername.js' %}"></script>
 {% endblock %}
