--- a/EchoFeed/feed/templates/feed/profile.html
+++ b/EchoFeed/feed/templates/feed/profile.html
@@ -81,15 +81,15 @@
         <div class="modal-content">
             <span class="close-btn">&times;</span>
             <h2>Edit Profile</h2>
-            <form method="POST" enctype="multipart/form-data">
+            <form method="POST" enctype="multipart/form-data" id="edit-profile-form">
                 {% csrf_token %}
                 <div>
                     <label for="profile_image">Profile Image:</label>
                     <input type="file" name="profile_image" id="profile_image">
                 </div>
                 <div>
-                    <label for="username">Nickname:</label>
-                    <input type="text" name="username" id="username" value="{{request.user}}">
+                    <label for="username" id="username-label">Username:</label>
+                    <input type="text" name="username" id="id_username" value="{{request.user}}">
                 </div>
                 <div>
                     <label for="nickname">Nickname:</label>
@@ -99,7 +99,7 @@
                     <label for="bio">Bio:</label>
                     <textarea name="bio" id="bio">{{profile.bio}}</textarea>
                 </div>
-                <button type="submit">Save Changes</button>
+                <button type="submit" id="edit-profile">Save Changes</button>
             </form>
         </div>
     </div>
@@ -109,27 +109,28 @@
 {% block js %}
 <script>
     document.addEventListener("DOMContentLoaded", () => {
-        const editButton = document.querySelector(".buttons button:first-child"); // "Edit Profile" button
+        const editButton = document.querySelector(".buttons button:first-child");
         const modal = document.getElementById("editProfileModal");
         const closeButton = modal.querySelector(".close-btn");
 
-        // Show modal when edit button is clicked
         editButton.addEventListener("click", () => {
             modal.classList.remove("hidden");
         });
 
-        // Hide modal when close button is clicked
         closeButton.addEventListener("click", () => {
             modal.classList.add("hidden");
         });
 
-        // Hide modal when clicking outside the modal content
         modal.addEventListener("click", (event) => {
             if (event.target === modal) {
                 modal.classList.add("hidden");
             }
         });
     });
+    const checkUsernameUrl = "{% url 'check_username' %}";
+    const csrfToken = "{{ csrf_token }}";
+    const updateProfileUrl = "{% url 'feed:update_profile' %}";
 </script>
-
+<script src="{% static 'js/checkUsername.js' %}"></script>
+<script src="{% static 'js/editProfile.js' %}"></script>
 {% endblock %}
