--- a/EchoFeed/feed/static/css/styles.css
+++ b/EchoFeed/feed/static/css/styles.css
@@ -118,6 +118,44 @@ body {
     justify-content: space-around;
 }
 
+.alert-box {
+    display: none;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 15px 20px;
+    color: black;
+    background: linear-gradient(135deg, #2980b9, #8d44ad);
+    border-radius: 5px;
+    opacity: 0;
+    transition: opacity 1s ease;
+    z-index: 1000;
+}
+
+.alert-box.show {
+    display: block;
+    opacity: 0.8;
+}
+
+.loader {
+    display: none; /* Hidden by default */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw; /* Full width of the viewport */
+    height: 100vh; /* Full height of the viewport */
+    background-color: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+    z-index: 9999; /* Ensure the loader is on top of other content */
+    display: flex;
+    justify-content: center; /* Center the content horizontally */
+    align-items: center; /* Center the content vertically */
+}
+
+/* Loader Spinner Styles */
+.loader img {
+    width: 100px; /* Adjust size of the loader */
+    height: 100px;
+}
 
 @media (max-width: 768px) {
     .main {
