--- a/EchoFeed/feed/static/css/styles.css
+++ b/EchoFeed/feed/static/css/styles.css
@@ -49,6 +49,37 @@ body {
     margin: 15px 0;
 }
 
+.menu li button{
+    background: transparent;
+    border: none;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    padding: 10px 15px;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+    font-size: 18px;
+    cursor: pointer;
+    width: 100%;
+    font-family: 'Sour Gummy', Arial, sans-serif;
+}
+
+
+.menu li button i {
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+.menu li button:hover {
+    background-color: #333333;
+    color: #00c8ff;
+}
+
+.menu li button.active-link {
+    background-color: #333333 !important;
+    color: #00c8ff;
+}
+
 .menu li a {
     text-decoration: none;
     color: #ffffff;
@@ -174,6 +205,23 @@ body {
     padding: 10px 0;
     border-top: 1px solid #333;
     z-index: 1000;
+}
+
+.bottom-bar button{
+    background: none;
+    border: none;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+    cursor: pointer;
+    transition: color 0.3s;
+}
+
+.bottom-bar button i {
+    font-size: 20px;
+    margin-bottom: 5px;
 }
 
 .bottom-bar a {
