--- a/EchoFeed/feed/templates/base.html
+++ b/EchoFeed/feed/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static "css/profile.css" %}">
     <link rel="stylesheet" href="{% static "css/searchModal.css" %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    {% block css %}{% endblock %}
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
@@ -46,7 +47,7 @@
                     </button>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url "feed:explore" %}">
                         <i class="fa-solid fa-compass"></i> Explore
                     </a>
                 </li>
@@ -75,7 +76,7 @@
             <button id="openSearchModal2" class="open-search-modal">
                 <i class="fa-solid fa-search"></i>
             </button>
-            <a href="#">
+            <a href="{% url "feed:explore" %}">
                 <i class="fa-solid fa-compass"></i>
             </a>
             <a href="#">
